created images, grid

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>dnGrid</title>
   </head>
   <body>
+    <div class="grid-contain">
+      <nav>
+        <h1>Daily News</h1>
+      </nav>
+      <section>
+        <img class="full-width" src="images/dnpastor.jpg" alt="pastor">
+        <h1>From the ball field to the chapel</h1>
+      </section>
+      <aside>
+        <div class="refer1">
+          <h2><a href="#"> App allows students to purchase birth control</a></h2>
+        </div>
+        <div class="refer2">
+          <h3><a href="#"> Famine knows no nationality</a></h3>
+        </div>
+        <div class="refer3">
+          <h3><a href="#">Jennifer Marns featured in studen cooking show</a></h3>
+        </div>
+      </aside>
+      <footer>
+        <p>11.16.2017</p>
+        <p><a href="#">ballstatedaily.com</p>
+      </footer>
 
+    </div>
   </body>
 </html>
