--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700" rel="stylesheet">
     <title>dnGrid</title>
   </head>
   <body>
@@ -15,6 +17,7 @@
       <section>
         <img class="full-width" src="images/dnpastor.jpg" alt="pastor">
         <h1>From the ball field to the chapel</h1>
+        <h3>Former Ball State baseball standout becomes youth pastor in Muncie</h3>
       </section>
       <aside>
         <div class="refer1">
