--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
       </nav>
       <section>
         <img class="full-width" src="images/dnpastor.jpg" alt="pastor">
+      </section>
+      <div class="headline">
         <h1>From the ball field to the chapel</h1>
         <h3>Former Ball State baseball standout becomes youth pastor in Muncie</h3>
-      </section>
+      </div>
+
       <aside>
         <div class="refer1">
           <h2><a href="#"> App allows students to purchase birth control</a></h2>
